--- a/templates/apps/users/profile.html
+++ b/templates/apps/users/profile.html
@@ -21,7 +21,7 @@
                    class="rounded-circle border"
                    style="width:128px;height:128px;object-fit:cover;">
             {% else %}
-              <img src="{% static 'images/avatars/default.png' %}" alt="avatar"
+              <img src="{% static 'img/avatars/default-avatar.png' %}" alt="avatar"
                    class="rounded-circle border"
                    style="width:128px;height:128px;object-fit:cover;">
             {% endif %}
