--- a/templates/base.html
+++ b/templates/base.html
@@ -68,6 +68,7 @@
 
   {% block scripts %}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-..." crossorigin="anonymous"></script>
+  <script src="{% static 'js/comments.js' %}"></script>
   {% endblock %}
 
 </body>
