bugfix: user profile default avatar fixed

--- a/templates/apps/users/profile.html
+++ b/templates/apps/users/profile.html
@@ -11,7 +11,6 @@
 
 <div class="container">
   <div class="row g-4">
-    <!-- Left side -->
     <div class="col-12 col-lg-4">
       <div class="card shadow-sm">
         <div class="card-body text-center">
@@ -21,7 +20,7 @@
                    class="rounded-circle border"
                    style="width:128px;height:128px;object-fit:cover;">
             {% else %}
-              <img src="{% static 'img/avatars/default-avatar.png' %}" alt="avatar"
+              <img src="{% static 'img/default-avatar.png' %}" alt="avatar"
                    class="rounded-circle border"
                    style="width:128px;height:128px;object-fit:cover;">
             {% endif %}
