--- a/templates/apps/posts/post_detail.html
+++ b/templates/apps/posts/post_detail.html
@@ -4,7 +4,9 @@
 {% block title %}{{ post.title }} | {{ block.super }}{% endblock %}
 
 {% block content %}
+
 <div class="card shadow-sm mx-auto" style="max-width: 1780px;">
+          <h1 class="card-title text-center">{{ post.title }}</h1>
   {% if post.image %}
     <div class="text-center mt-3">
       <!-- mini img -->
@@ -39,10 +41,17 @@
   {% endif %}
 
   <div class="card-body">
-    <h4 class="card-title text-center">{{ post.title }}</h4>
-    <p class="text-muted small text-center mb-3">
-      by {{ post.user.username|default:post.user.email }} • {{ post.created_at|date:"M d, Y H:i" }}
-    </p>
+
+    <div class="text-center text-muted small mb-3">
+      <span class="me-2">by</span>
+      <a href="{% url 'users:author_profile' post.user.username %}"
+         class="text-decoration-none fw-semibold text-blue">
+        {{ post.user.get_full_name|default:post.user.username|default:post.user.email }}
+      </a>
+      <span class="mx-2">&bull;</span>
+      <span>{{ post.created_at|date:"d.m.Y H:i" }}</span>
+    </div>
+
 
     <p class="card-text">{{ post.text|linebreaks }}</p>
 
