navmenu: post search added

--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -43,6 +43,8 @@
       {% endif %}
       </ul>
 
+    {% include "includes/search_form.html" %}
+
       <!-- user menu -->
       <ul class="navbar-nav ms-auto">
         {% if user.is_authenticated %}
