--- a/templates/apps/comments/_comment.html
+++ b/templates/apps/comments/_comment.html
@@ -1,18 +1,33 @@
+{% load static %}
+{% static 'img/default-avatar.png' as default_avatar %}
+
 <div id="comment-{{ comment.pk }}" class="mb-3 d-flex">
   <div class="me-2">
-    <img
-      src="{{ comment.avatar_url }}"
-      alt="{{ comment.user.username|default:'user' }}"
-      class="rounded-circle"
-      width="40"
-      height="40"
-      onerror="this.onerror=null; this.src='{{ comment.avatar_url }}';"
-    />
+    {% if comment.avatar_url %}
+      <img src="{{ comment.avatar_url }}"
+           alt="{{ comment.user.username|default:'user' }}"
+           class="rounded-circle"
+           width="40" height="40"
+           onerror="this.onerror=null; this.src='{{ default_avatar }}';" />
+    {% else %}
+      {% if comment.user and comment.user.profile and comment.user.profile.avatar and comment.user.profile.avatar.name %}
+        <img src="{{ comment.user.profile.avatar.url }}"
+             alt="{{ comment.user.username|default:'user' }}"
+             class="rounded-circle"
+             width="40" height="40"
+             onerror="this.onerror=null; this.src='{{ default_avatar }}';" />
+      {% else %}
+        <img src="{{ default_avatar }}"
+             alt="default avatar"
+             class="rounded-circle"
+             width="40" height="40" />
+      {% endif %}
+    {% endif %}
   </div>
 
   <div class="flex-grow-1">
     <div class="d-flex align-items-center">
-      <strong class="me-2">{{ comment.user.get_full_name|default:comment.user.username }}</strong>
+      <strong class="me-2">{{ comment.user.get_full_name|default:comment.user.username|default:"Anonymous" }}</strong>
       <small class="text-muted">{{ comment.created_at|date:"d.m.Y H:i" }}</small>
       {% if comment.updated_at %}
         <small class="text-muted ms-2">(edited)</small>
@@ -29,6 +44,7 @@
 
     <div class="small text-muted d-flex gap-2">
       {% if user.is_authenticated %}
+        <a href="#" class="reply-link" data-parent="{{ comment.pk }}" data-post="{{ comment.post.pk }}">Reply</a>
         {% if user == comment.user or user.is_staff %}
           <a href="{% url 'comments:edit' comment.pk %}">Edit</a>
           <form action="{% url 'comments:delete' comment.pk %}" method="post" class="d-inline-block ms-1">
