--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,6 @@
   {% block extra_css %}
   <style>
 
-  /* comments */
 #comments-list { display: flex; flex-direction: column; gap: .75rem; }
 
 .comment-item {
@@ -109,6 +108,7 @@
   {% block scripts %}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-..." crossorigin="anonymous"></script>
   <script src="{% static 'js/comments.js' %}"></script>
+  <script src="{% static 'js/subscriptions.js' %}"></script>
 
   {% endblock %}
 
