messaging: messaging app between users added

--- a/templates/base.html
+++ b/templates/base.html
@@ -110,6 +110,7 @@ main.container {
 
   <script src="{% static 'js/comments.js' %}" defer></script>
   <script src="{% static 'js/subscriptions.js' %}" defer></script>
+  <script src="{% static 'js/messaging.js' %}" defer></script>
   {% endblock %}
 
 </body>
